--- a/src/Resources/views/Admin/ProductVariant/Tab/_deposit.html.twig
+++ b/src/Resources/views/Admin/ProductVariant/Tab/_deposit.html.twig
@@ -1,5 +1,5 @@
 <div class="ui tab" data-tab="deposit">
-    <h3 class="ui dividing header">{{ 'gweb_deposit.admin.product_variant.tab'|trans }}</h3>
+    <h3 class="ui dividing header">{{ 'gewebe_sylius_product_deposit_plugin.admin.product_variant.tab'|trans }}</h3>
 
     {{ form_row(form.depositTaxCategory) }}
 
